# AsterAI

./: .api_keys.json  .env.template  .gitignore  .pre-commit-config.yaml  .secrets.json  ACTION_PLAN_BEFORE_TRAVEL.md  ADVANCED_INTEGRATIONS_FINAL_REPORT.md  ADVANCED_INTEGRATIONS_STATUS.md  ADVANCED_PROFIT_MAXIMIZATION_SYSTEM.py  ASTER_DATA_STRUCTURE_GUIDE.md  ASTER_PERPS_EXTREME_GUIDE.md  ASTER_SETUP_COMPLETE.md  CLOUD_PLATFORM_DEPLOYMENT_GUIDE.md  CODEBASE_ANALYSIS_REPORT.md  CODEBASE_AUDIT_REPORT.md  COMPLETE_CONTROL_CENTER_REPORT.md  COMPREHENSIVE_API_DATA_COLLECTOR.py  COMPREHENSIVE_API_OPTIMIZER.py  COMPREHENSIVE_MODEL_STRATEGY_OPTIMIZER.py  COMPREHENSIVE_REPORT.md  COMPREHENSIVE_SYSTEM_OPTIMIZATION_PLAN.md  COMPREHENSIVE_TRAINING_RESULTS.md  CONTRIBUTING.md  CURRENT_GPU_STATUS.md  CURRENT_SITUATION.md  CURRENT_STATUS.md  DASHBOARD_DEPLOYMENT_COMPLETE.md  DATA_PIPELINE_GUIDE.md  DATA_QUALITY_ACTION_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.txt  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.dashboard  Dockerfile.gpu  Dockerfile.paper_trading  Dockerfile.self_learning  (+187 more)
GPU_BACKTESTING_SUMMARY/: COMPREHENSIVE_SYSTEM_OVERVIEW.md  PERFORMANCE_BENCHMARKS.md  TECHNICAL_SPECIFICATIONS.md  VISUALIZATION_GUIDE.md
TEST_DATA_ARCHIVE/: ARCHIVE_INDEX.json  ORGANIZATION_SUMMARY.json
backtesting/: advanced_backtester.py
cloud/: Dockerfile  Dockerfile.autonomous  Dockerfile.dashboard  cloudbuild.yaml  cloudbuild_dashboard.yaml  deploy_all_systems.sh  deploy_production.py  deploy_profit_maximizer_20251019_101028.sh  deploy_to_gcp.sh
cloud_architecture/: automated_backtesting.py  central_dashboard_console.py  gcp_infrastructure.yaml
cloud_deployment/: deploy.sh
cloud_functions/: main.py  requirements.txt
config/: autonomous_trading_config.json  self_healing_config.json
dashboard/: Dockerfile  README.md  __init__.py  app.py  aster_trader.py  aster_trader_dashboard.py  deploy_to_gcp.sh  enhanced_visualization.py  matrix_theme.css  requirements.txt  unified_trading_dashboard.py
dashboard-next/: Dockerfile  README.md  cloudbuild.yaml  jest.config.js  next.config.js  package.json  tsconfig.json
data/: aster_asset_registry.json  aster_assets_discovery_mock.json  ml_data_validation_report.json
data_pipeline/: aster_dex_data_collector.py  automated_analysis.py  binance_vpn_optimizer.py  collect_historical_data.py  data_analyzer.py  data_preparer.py  data_sharer.py  data_utilizer.py  data_validator.py  feature_engineering.py  smart_data_router.py
docs/: DATA_ENGINEERING_LESSONS.md  README.md  data_pipeline_architecture.md
local/: API_CREDENTIALS_TEMPLATE.txt  gpu_benchmark_suite.py  gpu_comprehensive_test.py  gpu_data_science_lab.py  gpu_strategy_comparison.py  organize_files.py  quick_deploy.bat  requirements-gpu.txt  rtx_trading_edge_demo.py  run_local_trader.bat  simple_gpu_experiments.py  start_services.bat  stop_services.bat
local_training/: advanced_backtester.py  aster_dex_data_collector.py  continuous_learner.py  continuous_learning_system.py  feature_engineering.py  model_deployment_pipeline.py  train_aster_native_model.py  train_confluence_model.py
mcp_trader/: __init__.py  ai_trading_system.py  config.py  logging_utils.py  ray_cluster.py
models/: cpu_models_metadata.json
modern_frontend/: Dockerfile  cloudbuild.yaml  index.html
monitoring/: real_time_monitor.py
optimizations/: __init__.py  integrated_collector.py  system_validator.py
requirements/: requirements-gpu.txt  requirements-minimal.txt  requirements.sentiment.txt
scripts/: activate_pytorch_env.ps1  analyze_data_issues.py  aster_data_feed.py  audit_codebase.py  backtest_aster_strategies.py  backtest_confluence_strategy.py  backtest_cpu_model.py  build_aster_registry_simple.py  build_pytorch_sm120.ps1  collect_6month_data.py  collect_all_aster_assets.py  collect_all_ultimate_data.py  collect_alternative_data.py  collect_aster_data_sync.py  collect_aster_native_assets.py  collect_aster_perps_data.py  collect_data_simple.py  collect_multi_source_crypto.py  collect_real_aster_data.py  collect_traditional_markets.py  create_materialized_views.sql  cuda_installer.py  debug_api_detailed.py  debug_aster_api.py  demo_cpu_training.py  deploy_gcp.sh  deploy_live_trading.py  discover_aster_assets.py  fetch_data.py  fetch_okx.py  fix_cuda_path_permanent.ps1  fix_gpu_pytorch.py  generate_architecture_diagrams.py  improve_data_quality.py  init_aster_data_structure.py  install_cuda_12.8.ps1  install_dependencies.py  integrate_dashboard_control.py  integrate_vpin.py  live_dashboard.py  (+64 more)
strategies/: aggressive_perps_strategy.py
tests/: __init__.py  conftest.py  mock_asset_data.py  (+9 more)
(+534 files in other folders)
